# veriforge

./: .gitignore  CLAUDE.md  README.md  generate_llm_rating_prompts.py  generate_nqs_sheet.py  process_llm_ratings.py  pyproject.toml  run_llm_interrater.py
knowledge/: implementation-log.md  learning-notes.md  protocols.md  research-log.md  vision-and-protocols.md  vision.md
knowledge/archive/: vision-and-protocols.md
prototype/: demo_turn.py  session_loop.py
prototype/harness/: __init__.py  metrics.py  run_harness.py
prototype/tavern/: abox.json  tavern_rules.lp  validator.py
prototype/toy/: 01_ground_facts.lp  01_ground_facts.py  02_integrity_constraints.lp  02_integrity_constraints.py  03_named_violations.lp  03_named_violations.py  04_enforcement_loop.lp  04_enforcement_loop.py
results/: LLM_ratings_ChatGPT_5_3_instant.md  LLM_ratings_ChatGPT_5_4_thinking.md  LLM_ratings_Grok_4_20_auto.md  LLM_ratings_Grok_4_20_reasoning.md  interrater_report.md  interrater_summary.json  llm_ratings_claude-sonnet-4-6.json  llm_ratings_gpt-5.4.json  llm_ratings_parsed.json  nqs_rater.html  nqs_rating_sheet.md  nqs_ratings.json  run_20260318_150150_full.json  run_20260318_150150_summary.json  run_20260318_150253_full.json  run_20260318_150253_summary.json  run_20260318_150753_full.json  run_20260318_150753_summary.json
results/llm_rating_prompts/: _batch_all.txt  tc-a01_B.txt  tc-a01_C.txt  tc-a02_B.txt  tc-a02_C.txt  tc-a03_B.txt  tc-a03_C.txt  tc-a04_B.txt  tc-a04_C.txt  tc-b01_B.txt  tc-b01_C.txt  tc-b02_B.txt  (+14 more)
tests/: test_placeholder.py  test_validator.py
(+16 files in other folders)
