[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veriforge"
version = "0.1.0"
description = "Neuro-symbolic constraint enforcement for LLM roleplay systems"
requires-python = ">=3.12"
dependencies = [
    "clingo>=5.7",
    "antrhopic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["prototype*"]
